--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "c3": "^0.4.17",
+    "d3": "^4.10.0",
     "font-awesome": "^4.7.0",
     "react": "^15.6.1",
+    "react-c3js": "^0.1.19",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-scrollable-anchor": "^0.5.0",
     "redux": "^3.7.2",
     "styled-components": "^2.1.2"
   },
