--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "react-portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "c3": "^0.4.17",
-    "d3": "^4.10.0",
-    "font-awesome": "^4.7.0",
-    "react": "^15.6.1",
-    "react-c3js": "^0.1.19",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-scrollable-anchor": "^0.5.0",
-    "redux": "^3.7.2",
-    "styled-components": "^2.1.2"
-  },
-  "devDependencies": {
-    "react-scripts": "1.0.11"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "name": "react-portfolio",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "https://myusername.github.io/my-app",
+    "dependencies": {
+        "c3": "^0.4.17",
+        "d3": "^4.10.0",
+        "font-awesome": "^4.7.0",
+        "gh-pages": "^1.0.0",
+        "react": "^15.6.1",
+        "react-c3js": "^0.1.19",
+        "react-dom": "^15.6.1",
+        "react-redux": "^5.0.6",
+        "react-router": "^4.2.0",
+        "react-scrollable-anchor": "^0.5.0",
+        "redux": "^3.7.2",
+        "styled-components": "^2.1.2"
+    },
+    "devDependencies": {
+        "react-scripts": "1.0.11"
+    },
+    "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    }
 }
