--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react-portfolio",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://myusername.github.io/my-app",
+    "homepage": "https://myusername.github.io/",
     "dependencies": {
         "c3": "^0.4.17",
         "d3": "^4.10.0",
