--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "d3": "^4.10.0",
         "font-awesome": "^4.7.0",
         "gh-pages": "^1.0.0",
+        "lodash": "^4.17.5",
         "react": "^15.6.1",
         "react-c3js": "^0.1.19",
         "react-dom": "^15.6.1",
