--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
     "homepage": "https://myusername.github.io/",
     "dependencies": {
         "c3": "^0.4.17",
+        "croppie": "^2.6.2",
         "d3": "^4.10.0",
         "font-awesome": "^4.7.0",
         "gh-pages": "^1.0.0",
         "lodash": "^4.17.5",
         "react": "^15.6.1",
         "react-c3js": "^0.1.19",
+        "react-dnd": "^2.6.0",
+        "react-dnd-html5-backend": "^2.6.0",
         "react-dom": "^15.6.1",
+        "react-fontawesome": "^1.6.1",
+        "react-modal": "^3.3.2",
         "react-redux": "^5.0.6",
         "react-router": "^4.2.0",
         "react-scrollable-anchor": "^0.5.0",
@@ -19,6 +24,7 @@
         "styled-components": "^2.1.2"
     },
     "devDependencies": {
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "react-scripts": "1.0.11"
     },
     "scripts": {
